# got_label_creator_v2

./: .gitignore  Cargo.toml  README.md
design/: design.sketch
src/: builder.rs  create_csv.rs  domain.rs  lib.rs  log.rs  main.rs
tests/: test1.csv
ui/: main.slint  table.slint
