[package]
name = "got_label_creator_v2"
version = "0.0.1"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
slint = "1.0.2"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.17"

[build-dependencies]
slint-build = "1.0.2"
